--- a/CSS/style.css
+++ b/CSS/style.css
@@ -84,7 +84,7 @@ section {
 }
 
 .about {
-    background-image: url(images/shapes/7.png);
+    background-image: url(Images/shapes/7.png);
     background-repeat: no-repeat;
     width: 100%;
     background-size: cover;
